# ompstuff

./: .gitignore  CMakeLists.txt  README.md  main.cpp  untitled
